<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/brand_primary_0"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry">
            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tv_saudacao" />
            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_nome_usuario" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry">
            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tv_agencia"
                android:textStyle="bold" />
            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tv_agencia_numero" />
            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tv_conta_corrente" />
            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tv_conta_corrente_numero" />
        </LinearLayout>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/card_saldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:contentPaddingLeft="16dp"
        app:contentPaddingRight="16dp"
        app:contentPaddingTop="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutCompat">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="32dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="start"
                    android:src="@drawable/ic_monetization_on_black_24dp"
                    android:contentDescription="@string/im_icone_update" />
                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_width="0dp"
                    android:layout_weight="10"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/tv_saldo_disponivel" />
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="0dp"
                    android:paddingVertical="0dp"
                    android:src="@drawable/ic_baseline_expand_less_24"
                    android:layout_gravity="end"
                    android:background="@color/white"
                    android:contentDescription="@string/ib_recolher_elemento" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/tv_simbolo_monetario" />
                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/tv_saldo_valor" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/tv_saldo_limite" />
                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/tv_simbolo_monetario" />
                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Subtitle1"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginRight="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/tv_saldo_limite_valor" />
                </LinearLayout>
            </LinearLayout>
            <View  android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/cardview_shadow_start_color"
                android:layout_marginTop="16dp" />
            <androidx.appcompat.widget.AppCompatButton
                android:background="@color/white"
                android:textColor="@color/brand_primary_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/tv_ver_extrato" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/botoes_operacores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_saldo"
        android:paddingBottom="8dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"
            app:cardElevation="4dp"
            android:clickable="true"
            app:contentPadding="16dp"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:paddingTop="4dp"
                    android:text="@string/tv_pagar"
                    app:drawableTopCompat="@drawable/ic_baseline_credit_card_24"
                    app:drawableTint="@color/brand_primary_0"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:cardElevation="4dp"
            android:clickable="true"
            app:contentPadding="16dp"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:paddingTop="4dp"
                    android:text="@string/tv_transferir"
                    app:drawableTopCompat="@drawable/ic_baseline_sync_alt_24"
                    app:drawableTint="@color/brand_primary_0"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"
            app:cardElevation="4dp"
            android:clickable="true"
            app:contentPadding="16dp"
            android:focusable="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:paddingTop="4dp"
                    android:text="@string/tv_recarga"
                    app:drawableTopCompat="@drawable/ic_baseline_system_update_24"
                    app:drawableTint="@color/brand_primary_0" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/botoes_operacores"
        android:layout_marginHorizontal="16dp"
        app:contentPadding="16dp"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/brand_primary_0">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/tv_cartao_final" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/tv_cartao_final_numero" />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginVertical="0dp"
                android:paddingVertical="0dp"
                android:src="@drawable/ic_baseline_expand_more_24"
                android:layout_gravity="end"
                android:background="@color/brand_primary_0"
                android:contentDescription="@string/ib_recolher_elemento"
                app:tint="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>